--- a/_episodes_rmd/04-power-calculations.Rmd
+++ b/_episodes_rmd/04-power-calculations.Rmd
@@ -34,14 +34,14 @@ library(tidyverse)
 
 We have used the example of the effects of two different diets on the weight of mice. Since in this illustrative example we have access to the population, we know that in fact there is a substantial (about 10%) difference between the average weights of the two populations:
 
-```{r,message=FALSE,echo=FALSE}
+```{r, message=FALSE, echo=FALSE}
 library(downloader)
 url <- "https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/mice_pheno.csv"
 filename <- "mice_pheno.csv"
 if(!file.exists(filename)) download(url,destfile=filename)
 ```
 
-```{r,message=FALSE}
+```{r, message=FALSE}
 library(dplyr)
 dat <- read.csv("mice_pheno.csv") #Previously downloaded 
 
@@ -62,9 +62,9 @@ We have also seen that, in some cases, when we take a sample and perform a t-tes
 ```{r}
 set.seed(1)
 N <- 5
-hf <- sample(hfPopulation,N)
-control <- sample(controlPopulation,N)
-t.test(hf,control)$p.value
+hf <- sample(hfPopulation, N)
+control <- sample(controlPopulation, N)
+t.test(hf, control)$p.value
 ```
 
 Did we make a mistake? By not rejecting the null hypothesis, are we
@@ -80,6 +80,7 @@ subjects exposed to potential risk in a study. Here we explain what
 statistical power means. 
 
 #### Types of Error
+insert a graphic and reduce the text
 
 Whenever we perform a statistical test, we are aware that we may make a
 mistake. This is why our p-values are not 0. Under the null, there is
@@ -111,7 +112,8 @@ Most journals and regulatory agencies frequently insist that results be signific
 Power is the probability of rejecting the null when the null is
 false. Of course "when the null is false" is a complicated statement
 because it can be false in many ways.
-$\Delta \equiv \mu_Y - \mu_X$
+
+![](../fig/04-delta.png)
 could be anything and the power actually depends on this parameter. It
 also depends on the standard error of your estimates which in turn
 depends on the sample size and the population standard deviations. In
@@ -140,13 +142,13 @@ What is our power with this particular data? We will compute this probability by
 B <- 2000
 ```
 
-simulations. The simulation is as follows: we take a sample of size $N$ from both control and treatment groups, we perform a t-test comparing these two, and report if the p-value is less than `alpha` or not. We write a function that does this:
+simulations. The simulation is as follows: we take a sample of size *N* from both control and treatment groups, we perform a t-test comparing these two, and report if the p-value is less than `alpha` or not. We write a function that does this:
 
 ```{r}
 reject <- function(N, alpha=0.05){
-   hf <- sample(hfPopulation,N) 
-   control <- sample(controlPopulation,N)
-   pval <- t.test(hf,control)$p.value
+   hf <- sample(hfPopulation, N) 
+   control <- sample(controlPopulation, N)
+   pval <- t.test(hf, control)$p.value
    pval < alpha
 }
 ```
@@ -159,7 +161,7 @@ reject(12)
 Now we can use the `replicate` function to do this `B` times. 
 
 ```{r}
-rejections <- replicate(B,reject(N))
+rejections <- replicate(B, reject(N))
 ```
 
 Our power is just the proportion of times we correctly reject. So with  $N=12$ our power is only: 
