--- a/_episodes_rmd/03-inference-pse.Rmd
+++ b/_episodes_rmd/03-inference-pse.Rmd
@@ -43,10 +43,8 @@ If there is no difference in means, we can say that there is no effect of diet.
 If there is a difference in means, we can say that the diet has an effect. The 
 question we are asking can be expressed as:
 
-Is
-
-![Does mean of Y less mean of x equal zero?](../fig/02-muy-mux-eq-zero.png)
-We can even compare more than two means.  The three normal curves below help to visualize a question comparing the means of each curve to one of the others.  
+![Does mean of Y less mean of X equal zero?](../fig/02-muy-mux-eq-zero.png)
+We can even compare more than two means.  The three normal curves below help to visualize a question comparing the means of each curve to one of the others. 
 
 ![Normal curves with different means and standard deviations](../fig/normal-curves.png)
 
@@ -76,7 +74,9 @@ type. We download
 [this](https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/mice_pheno.csv) 
 file to our working directory and read in to R:
 
-
+```{r, include = FALSE}
+library(dplyr)
+```
 
 ```{r load_pheno}
 pheno <- read.csv(file = "../data/mice_pheno.csv")
@@ -130,7 +130,8 @@ The variance:
 with the standard deviation being the square root of the variance. We refer to 
 such quantities that can be obtained from the population as 
 *population parameters*. The question we started out asking can now be written 
-mathematically: <strong>is <i>&mu;<sub>Y</sub> - &mu;<sub>X</sub> = 0</i></strong> ?
+mathematically: <strong>is <i>&mu;<sub>Y</sub> - &mu;<sub>X</sub> = 0</i></strong> ? 
+
 Although in our illustration we have all the values and can check if this is 
 true, in practice we do not. For example, in practice it would be prohibitively 
 expensive to buy all the mice in a population. Here we learn how taking a 
@@ -165,23 +166,22 @@ the Central Limit Theorem permits us to use an approximation to answer this
 question, as well as motivate the widely used t-distribution.
 
 
-> ## Exercise   
+> ## Exercise  
 > We will use the mouse phenotype data. Remove the observations that contain missing 
 > values:  
->   
+> 
 > `pheno <- na.omit(pheno)`  
->
-> 1. Use `dplyr` to create a vector `x` with the body weight of all males on the 
+> 
+> Use `dplyr` to create a vector `x` with the body weight of all males on the 
 > control (chow) diet.   
-> What is this population’s average body weight? 
+> What is this population’s average body weight?  
 >
 > > ## Solution
 > >
-> > 
-> > ~~~
+> > ```{r}
 > > # Omit observations with missing data
 > > pheno <- na.omit(pheno)
-> > 
+> >
 > > # Create subset of males on chow diet
 > > x <- pheno %>%
 > >   filter(Diet == "chow" & Sex == "M") %>%
@@ -190,15 +190,7 @@ question, as well as motivate the widely used t-distribution.
 > > 
 > > # Calculate mean weight
 > > mean(x)
-> > ~~~
-> > {: .language-r}
-> > 
-> > 
-> > 
-> > ~~~
-> > [1] 30.96381
-> > ~~~
-> > {: .output}
+> > ```
 > {: .solution}
 >
 > Set the seed at 1. Take a random sample `X` of size 25 from `x`. What is 
@@ -206,35 +198,20 @@ question, as well as motivate the widely used t-distribution.
 > 
 > > ## Solution
 > >
-> > 
-> > ~~~
+> > ```{r}
 > > set.seed(1)
 > > x_sample <- sample(x, 25)
 > > mean(x_sample)
-> > ~~~
-> > {: .language-r}
-> > 
-> > 
-> > 
-> > ~~~
-> > [1] 30.5196
-> > ~~~
-> > {: .output}
+> > ```
 > {: .solution}
 > 
-> Use `dplyr` to create a vector `y` with the body weight of all males on the high fat (hf) diet.
-> 2. Now use the `rafalib` package and use the `popsd` function to compute the 
-> population standard deviation.  
-> 3. Set the seed at 1. Take a random sample `X` of size 25 from `x`. What is 
-> the sample average?  
-> 4. Use `dplyr` to create a vector `y` with the body weight of all males on the 
+> Use `dplyr` to create a vector `y` with the body weight of all males on the 
 > high fat (hf) diet.  
-> What is this population’s average?  
+> What is this population’s average?
 > 
 > > ## Solution
 > >
-> > 
-> > ~~~
+> > ```{r}
 > > # Create subset of males on high fat diet
 > > y <- pheno %>%
 > >   filter(Diet == "hf" & Sex == "M") %>%
@@ -243,15 +220,7 @@ question, as well as motivate the widely used t-distribution.
 > > 
 > > # Calculate the mean weight
 > > mean(y)
-> > ~~~
-> > {: .language-r}
-> > 
-> > 
-> > 
-> > ~~~
-> > [1] 34.84793
-> > ~~~
-> > {: .output}
+> > ```
 > {: .solution}
 > 
 > Set the seed at 1. Take a random sample `Y` of size 25 from `y`. What is 
@@ -259,28 +228,19 @@ question, as well as motivate the widely used t-distribution.
 >
 > > ## Solution
 > >
-> > 
-> > ~~~
+> > ```{r}
 > > set.seed(1)
 > > y_sample <- sample(y, 25)
 > > mean(y_sample)
-> > ~~~
-> > {: .language-r}
-> > 
-> > 
-> > 
-> > ~~~
-> > [1] 35.8036
-> > ~~~
-> > {: .output}
+> > ```
 > {: .solution}
 >
-> What is the difference in absolute value between <i>x&#772;-y&#772;</i> and > <i>X&#772;-Y&#772;</i>?
+> What is the difference in absolute value between <i>x&#772;-y&#772;</i> and 
+> <i>X&#772;-Y&#772;</i>?  
 > 
 > > ## Solution
 > >
-> > 
-> > ~~~
+> > ```{r}
 > > # mu_x - mu_y
 > > pop_mean_diff <- abs(mean(x) - mean(y))
 > > # x-bar - y-bar
@@ -289,122 +249,43 @@ question, as well as motivate the widely used t-distribution.
 > > pop_sample_mean_diff <- abs(pop_mean_diff - sample_mean_diff)
 > > 
 > > pop_sample_mean_diff
-> > ~~~
-> > {: .language-r}
-> > 
-> > 
-> > 
-> > ~~~
-> > [1] 1.399884
-> > ~~~
-> > {: .output}
+> > ```
 > {: .solution}
 > 
-> Repeat the above for females. Make sure to set the seed to 1 before each > sample call. What is the difference 
+> Repeat the above for females. Make sure to set the seed to 1 before each 
+> sample call. What is the difference 
 > in absolute value between <i>x&#772;-y&#772;</i> and <i>X&#772;-Y&#772;</i>?
 > 
 > > ## Solution
-> > 
-> > ~~~
+> >
+> > ```{r}
 > > x_f <- pheno %>%
 > >     filter(Diet == "chow" & Sex == "F") %>%
 > >     select(Bodyweight) %>%
 > >     unlist
 > > mean(x_f)
-> > ~~~
-> > {: .language-r}
 > > 
-> > 
-> > 
-> > ~~~
-> > [1] 23.89338
-> > ~~~
-> > {: .output}
-> > 
-> > 
-> > 
-> > ~~~
 > > set.seed(1)
 > > x_f_sample <- sample(x_f, 25)
 > > mean(x_f_sample)
-> > ~~~
-> > {: .language-r}
 > > 
-> > 
-> > 
-> > ~~~
-> > [1] 24.2528
-> > ~~~
-> > {: .output}
-> > 
-> > 
-> > 
-> > ~~~
 > > y_f <- pheno %>%
 > >     filter(Diet == "hf" & Sex == "F") %>%
 > >     select(Bodyweight) %>%
 > >     unlist
 > > mean(y_f)
-> > ~~~
-> > {: .language-r}
 > > 
-> > 
-> > 
-> > ~~~
-> > [1] 26.2689
-> > ~~~
-> > {: .output}
-> > 
-> > 
-> > 
-> > ~~~
 > > set.seed(1)
 > > y_f_sample <- sample(y_f, 25)
 > > mean(y_f_sample)
-> > ~~~
-> > {: .language-r}
 > > 
-> > 
-> > 
-> > ~~~
-> > [1] 28.3828
-> > ~~~
-> > {: .output}
-> > 
-> > 
-> > 
-> > ~~~
 > > pop_mean_diff_f <- abs(mean(x_f) - mean(y_f))
 > > sample_mean_diff_f <- abs(mean(x_f_sample) - mean(y_f_sample))
 > > pop_sample_mean_diff_f <- abs(pop_mean_diff_f - sample_mean_diff_f)
 > > 
 > > pop_sample_mean_diff_f
-> > ~~~
-> > {: .language-r}
-> > 
-> > 
-> > 
-> > ~~~
-> > [1] 1.754483
-> > ~~~
-> > {: .output}
+> > ```
 > {: .solution}
 > 
 {: .challenge}
 
-> 8. Repeat the above for females. Make sure to set the seed to 1 before each 
-> sample call. What is the difference 
-> in absolute value between <i>y&#772;-x&#772;</i> and <i>X&#772;-Y&#772;</i>?  
-> 9. For the females, our sample estimates were closer to the population 
-> difference than with males. 
-> What is a possible explanation for this?  
-> A) The population variance of the females is smaller than that of the males; 
-> thus, the sample variable has less variability.  
-> B) Statistical estimates are more precise for females.  
-> C) The sample size was larger for females.  
-> D) The sample size was smaller for females.
->
-> > ## Solution to Exercise 1
-> >
-> {: .solution}
-{: .challenge}
